# tabby-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  changelog.md  readme.md  todo.md
App/: CMakeLists.txt
App/assets/shaders/: Renderer2D_Quad.glsl
App/assets/shaders/gl33/: Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.frag
App/assets/shaders/gles3/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl
App/assets/textures/: Tabby.aseprite
App/src/: Base.cpp  Base.h  GameOfLife.cpp  GameOfLife.h  GameOfLifeBase.cpp  GameOfLifeBase.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  minshell.html
App/src/Scenes/: Test2Scene.cpp  Test3Scene.cpp  Test3Scene.h  TestScene.cpp
App/src/Scripts/: PlayerScript.h
Game/: CMakeLists.txt  CmakeLists.txt
Game/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Game/src/Game/Scenes/: DevTestScene.cpp  Scenes.h  TitleScreenScene.cpp  TitleScreenScene.h
Game/src/Game/Scripts/: Scripts.h  cameraMove.cpp  cameraMove.h  playerMove.cpp  playerMove.h
Game/src/Game/UI/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Tabby/: CMakeLists.txt  CmakeLists.txt
Tabby/assets/tilemaps/: world.ldtk
Tabby/src/: Config.h  Tabby.h  main.cpp  minshell.html  tbpch.cpp  tbpch.h
Tabby/src/ComponentSystem/: Component.h  Components.h
Tabby/src/ComponentSystem/Components/: C_Animation.cpp  C_Animation.h  C_Camera.cpp  C_Camera.h  C_Drawable.cpp  C_Drawable.h  C_LDtkTilemap.cpp  C_LDtkTilemap.h  C_Rigidbody.cpp  C_Rigidbody.h  C_Sprite.cpp  C_Sprite.h  C_TiledTilemap.cpp  C_TiledTilemap.h  C_Transform.cpp  C_Transform.h
Tabby/src/Core/: Animation.cpp  Application.cpp  Application.h  Assert.h  EntryPoint.h  Game.cpp  Game.h  S_Drawable.cpp  S_Drawable.h  UUID.cpp  UUID.h
Tabby/src/Drivers/: OpenglUtil.h
Tabby/src/Drivers/OpenGL33/: OpenGL33Buffer.cpp  OpenGL33Context.cpp  OpenGL33Context.h  OpenGL33Framebuffer.cpp  OpenGL33Framebuffer.h  OpenGL33RendererAPI.cpp  OpenGL33RendererAPI.h  OpenGL33Shader.cpp  OpenGL33Shader.h  OpenGL33Texture.cpp  OpenGL33Texture.h  OpenGL33VertexArray.cpp
Tabby/src/Drivers/gl33/: GL33.cpp  GL33.h  OpenGL33Buffer.cpp  OpenGL33Buffer.h  OpenGL33Context.cpp  OpenGL33Context.h  OpenGL33Framebuffer.cpp  OpenGL33RendererAPI.cpp  OpenGL33RendererAPI.h  OpenGL33Shader.cpp  OpenGL33Texture.cpp  OpenGL33Texture.h  OpenGL33UniformBuffer.cpp  OpenGL33VertexArray.cpp  OpenGL33VertexArray.h
Tabby/src/Drivers/gles3/: GLES3.h  OpenGLES3Context.cpp  OpenGLES3Context.h  OpenGLES3Framebuffer.cpp  OpenGLES3RendererAPI.cpp  OpenGLES3RendererAPI.h  OpenGLES3Shader.cpp  OpenGLES3Shader.h  OpenGLES3Texture.cpp  OpenGLES3Texture.h  OpenGLES3UniformBuffer.cpp  OpenGLES3VertexArray.cpp  OpenGLES3VertexArray.h
Tabby/src/Game/Scenes/: DevTestScene.cpp  DevTestScene.h  TitleScreenScene.cpp  TitleScreenScene.h
Tabby/src/Game/Scripts/: Scripts.h  playerMove.cpp  playerMove.h
Tabby/src/Graphics/: Animation.h  Graphics.cpp  Graphics.h
Tabby/src/Graphics/Camera/: CameraTools.cpp  CameraTools.h
Tabby/src/Math/: Math.h
Tabby/src/Physics/: Physics.cpp  Physics.h
Tabby/src/Platform/Linux/: LinuxInput.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
Tabby/src/Platform/Mac/: MacInput.cpp  MacPlatformUtils.cpp  MacWindow.cpp  MacWindow.h
Tabby/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Tabby/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Tabby/src/Scene/: Components.h  GameObject.cpp  GameObject.h  GameObjectCollection.cpp  GameObjectCollection.h  Scene.cpp  Scene.h  SceneStateMachine.cpp  SceneStateMachine.h  ScriptableGameObject.cpp  ScriptableGameObject.h
Tabby/src/Scene/Octree/: Octree.cpp  Octree.h
Tabby/src/Tabby/Asset/: Asset.h  AssetFile.h  AssetManager.cpp  AssetManager.h  AssetRegistry.h  AssetType.h
Tabby/src/Tabby/Audio/: AudioEngine.cpp  AudioEngine.h
Tabby/src/Tabby/Core/: Application.cpp  Application.h  Assert.h  Base.h  Buffer.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  GamepadCodes.h  Input.cpp  Input.h  KeyCodes.cpp  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.cpp  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Tabby/src/Tabby/Debug/: Instrumentor.h
Tabby/src/Tabby/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tabby/src/Tabby/Filesystem/: Filesystem.cpp
Tabby/src/Tabby/Foundation/: Types.h
Tabby/src/Tabby/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Tabby/src/Tabby/Input/: Input.h  MouseCodes.h
Tabby/src/Tabby/Log/: Log.h
Tabby/src/Tabby/Math/: Math.cpp  Math.h
Tabby/src/Tabby/Physics/: Physics2D.cpp  Physics2D.h  PhysicsWorld.cpp  PhysicsWorld.h
Tabby/src/Tabby/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Tabby/src/Tabby/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  MSDFData.h  RenderCommand.h  (+19 more)
Tabby/src/Util/: DebugUtils.h  EnumHash.h  ResourceAllocator.h
app/: CMakeLists.txt
app/assets/prefabs/: ExamplePrefab.tbpf
app/assets/scenes/: test.glb
app/src/: Base.cpp  Base.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
app/src/CustomComponent/: PlayerComponent.cpp  PlayerComponent.h
app/src/Prefab/: ExamplePrefab.h
app/src/Scenes/: Test2Sceneh  TestScene.h
app/src/Scripts/: PlayerScript.h
tabby/: CMakeLists.txt
tabby/src/: Tabby.h  tbpch.h
(+1040 files in other folders)
